[package]
name = "rust-coding-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
csv = "1.1"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"

[features]
sorted = []
strict_mode = []
